<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="forgetPasswordLock"
            type="com.superc.bannerdairy.lock.ForgetPasswordLock"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/app_bg">

        <include
            android:id="@+id/title_bar"
            layout="@layout/include_title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_hight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/sign_bg"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_sign_phone_num"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_bg"/>

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_input_password"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_bg"/>

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_confirm_password"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_bg"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
            app:layout_constraintRight_toRightOf="@+id/linearLayout">

            <EditText
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_enter_code"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="13dp"
                android:text="@string/get_code"
                android:onClick="@{()->forgetPasswordLock.sendCode()}"
                android:textColor="@color/main_color"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:gravity="center"
            android:background="@drawable/login_ok_bg"
            android:text="@string/ok"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textColor="@color/white"
            android:onClick="@{()->forgetPasswordLock.send()}"
            app:layout_constraintLeft_toLeftOf="@+id/relativeLayout"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintRight_toRightOf="@+id/relativeLayout"/>


    </LinearLayout>

</layout>
