<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signLock"
            type="com.superc.bannerdairy.lock.SignLock"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg">

        <include
            android:id="@+id/include"
            layout="@layout/include_title_bar"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_bar_hight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/sign_bg"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_sign_phone_num"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_bg"/>

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_input_password"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_bg"/>

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_confirm_password"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/inviter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/sign_bg"
            android:hint="@string/please_enter_inviter_phone"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
            app:layout_constraintRight_toRightOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/sign_bg"
            app:layout_constraintLeft_toLeftOf="@+id/inviter"
            app:layout_constraintRight_toRightOf="@+id/inviter"
            app:layout_constraintTop_toBottomOf="@+id/inviter">

            <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_enter_code"
                android:maxLength="16"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="13dp"
                android:text="@string/get_code"
                android:textColor="@color/main_color"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/relativeLayout"
            app:layout_constraintRight_toRightOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="注册成功表示您同意"
                android:textColor="#c8c8c8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《旗帜奶粉》"
                android:textColor="#646464"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="相关协议"
                android:textColor="#c8c8c8"/>

        </LinearLayout>

        <TextView
            android:id="@+id/sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="20dp"
            android:padding="13dp"
            android:gravity="center"
            android:background="@drawable/login_ok_bg"
            android:text="@string/to_sign"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout2"
            app:layout_constraintRight_toRightOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>


    </android.support.constraint.ConstraintLayout>

</layout>
