<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginLock"
            type="com.superc.bannerdairy.lock.LoginLock"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="284dp"
            android:orientation="vertical"
            android:background="@drawable/login_bg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ussername"
                    />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:maxLines="1"
                    android:maxLength="11"
                    android:textSize="14sp"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:text="@={loginLock.loginData.loginName}"
                    android:background="@null"
                    android:hint="@string/please_input_username"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/password"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:maxLines="1"
                    android:maxLength="16"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:text="@={loginLock.loginData.loginPwd}"
                    android:background="@null"
                    android:hint="@string/please_input_password"
                    />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="20dp"
            android:padding="13dp"
            android:gravity="center"
            android:onClick="@{()->loginLock.toLogin()}"
            android:background="@drawable/login_ok_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
            app:layout_constraintRight_toRightOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_cancel_bg"
            android:gravity="center"
            android:onClick="@{()->loginLock.toSign()}"
            android:padding="13dp"
            android:text="@string/sign"
            android:textColor="@color/login_text"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/login"
            app:layout_constraintRight_toRightOf="@+id/login"
            app:layout_constraintTop_toBottomOf="@+id/login"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->loginLock.toForgetPassword()}"
            android:text="@string/forgot_password"
            android:textColor="@color/login_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/login"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/logoo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.63"/>

    </android.support.constraint.ConstraintLayout>

</layout>
