<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainLock"
            type="com.superc.bannerdairy.lock.MainLock"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/title_bar"
            layout="@layout/include_title_bar"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_bar_hight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RadioGroup
            android:id="@+id/main_rg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RadioButton
                android:id="@+id/main_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@drawable/zhuye2"
                android:gravity="center"
                android:onClick="@{(view)->mainLock.homePage(view)}"
                android:padding="3dp"
                android:text="@string/home_page"
                android:textColor="@color/main_color"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/main_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@drawable/customer1"
                android:gravity="center"
                android:onClick="@{(view)->mainLock.customerPage(view)}"
                android:padding="3dp"
                android:text="@string/customer_service"
                android:textColor="@color/main_bottom_text"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/main_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@drawable/show1"
                android:gravity="center"
                android:onClick="@{(view)->mainLock.showPage(view)}"
                android:padding="3dp"
                android:text="@string/seller_show"
                android:textColor="@color/main_bottom_text"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/main_mine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:button="@null"
                android:checked="false"
                android:drawableTop="@drawable/mine1"
                android:gravity="center"
                android:onClick="@{(view)->mainLock.minePage(view)}"
                android:padding="3dp"
                android:text="@string/mine_page"
                android:textColor="@color/main_bottom_text"
                android:textSize="14sp"/>

        </RadioGroup>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@color/app_bg"
            app:layout_constraintBottom_toTopOf="@+id/main_rg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </View>

        <com.superc.bannerdairy.service.MyViewPager
            android:id="@+id/main_page"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_bar"
            app:layout_constraintVertical_bias="0.5"/>

    </android.support.constraint.ConstraintLayout>

</layout>
